# Learning_OpenGL

./: CMakeLists.txt
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp
src/shaders/: f.glsl  v.glsl
